tests/consteval_string_index_oob_bad.stderr
tests/consteval_string_index_oob_bad.sl:9:16: error: SL2083: const block failed compile-time evaluation: index is out of bounds in const evaluation
